--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    padding: 10px;
+    margin: auto;
+    width: 90%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.form-group {
+    text-align: left;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.form-label {
+    font-size: 15px;
+    font-weight: 600;
+    font-family: system-ui;
+}
+
+.button-primary {
+    font-size: 13px;
+    color: white;
+    background-color: #2B3A55;
+    width: 20%;
+    margin: auto;
+    border: none;
+    padding: 10px 0;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 2s linear;
+}
+
+.button-primary:hover {
+    background-color: #5673a7;
+}
+
+.form-input {
+    padding: 10px 5px;
+    border-radius: 10px;
+    border: 1px solid #E8E2e2;
+}
+
+.input-error {
+    font-family: monospace;
+    padding: 5px 16px;
+    font-weight: 600;
+    color: #fd3a00fa;
+}
+
+.button-logout {
+    background: none;
+    border: none;
+    color: red;
+    cursor: pointer;
+}
+
+.mt10 {
+    margin-top: 10px;
+}
+
+.mb10 {
+    margin-bottom: 10px;
+}
+
+.ml10 {
+    margin-left: 10px;
+}
+
+.mr10 {
+    margin-right: 10px;
+}
+
+.p5 {
+    padding-bottom: 5px;
 }
