--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,19 @@
     cursor: pointer;
 }
 
+.button-question {
+    font-size: 13px;
+    color: white;
+    background-color: #4E6C50;
+    width: 50%;
+    margin: auto;
+    border: none;
+    padding: 10px 0;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 2s linear;
+}
+
 .mt10 {
     margin-top: 10px;
 }
@@ -80,6 +93,66 @@
     margin-right: 10px;
 }
 
+.m20 {
+    margin: 20px 0;
+}
+
 .p5 {
     padding-bottom: 5px;
+}
+
+.pt10 {
+    padding-top: 10px;
+}
+
+.pb10 {
+    padding-bottom: 10px;
+}
+
+.p-question {
+    padding: 2rem 5rem;
+}
+
+.bc-orange {
+    background-color: #F94A29;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card-container {
+    background: aliceblue;
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.card-col {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.title {
+    font-size: 16px;
+    font-weight: 900;
+    font-family: math;
+}
+
+.title-question {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.card-button {
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 5px 0;
+    width: 90%;
+    border-radius: 5px;
 }
