--- a/src/index.css
+++ b/src/index.css
@@ -1,158 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-.container {
-    padding: 10px;
-    margin: auto;
-    width: 90%;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.form-group {
-    text-align: left;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-.form-label {
-    font-size: 15px;
-    font-weight: 600;
-    font-family: system-ui;
-}
-
-.button-primary {
-    font-size: 13px;
-    color: white;
-    background-color: #2B3A55;
-    width: 20%;
-    margin: auto;
-    border: none;
-    padding: 10px 0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 2s linear;
-}
-
-.button-primary:hover {
-    background-color: #5673a7;
-}
-
-.form-input {
-    padding: 10px 5px;
-    border-radius: 10px;
-    border: 1px solid #E8E2e2;
-}
-
-.input-error {
-    font-family: monospace;
-    padding: 5px 16px;
-    font-weight: 600;
-    color: #fd3a00fa;
-}
-
-.button-logout {
-    background: none;
-    border: none;
-    color: red;
-    cursor: pointer;
-}
-
-.button-question {
-    font-size: 13px;
-    color: white;
-    background-color: #4E6C50;
-    width: 50%;
-    margin: auto;
-    border: none;
-    padding: 10px 0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 2s linear;
-}
-
-.mt10 {
-    margin-top: 10px;
-}
-
-.mb10 {
-    margin-bottom: 10px;
-}
-
-.ml10 {
-    margin-left: 10px;
-}
-
-.mr10 {
-    margin-right: 10px;
-}
-
-.m20 {
-    margin: 20px 0;
-}
-
-.p5 {
-    padding-bottom: 5px;
-}
-
-.pt10 {
-    padding-top: 10px;
-}
-
-.pb10 {
-    padding-bottom: 10px;
-}
-
-.p-question {
-    padding: 2rem 5rem;
-}
-
-.bc-orange {
-    background-color: #F94A29;
-}
-
-.card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.card-container {
-    background: aliceblue;
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-}
-
-.card-col {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-.title {
-    font-size: 16px;
-    font-weight: 900;
-    font-family: math;
-}
-
-.title-question {
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.card-button {
-    color: white;
-    font-size: 14px;
-    font-weight: 600;
-    padding: 5px 0;
-    width: 90%;
-    border-radius: 5px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
